# az_logger

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
src/: async_utils.rs  core.rs  lib.rs  log_entry.rs  macros.rs  utils.rs
tests/: async_logger.rs  sync_logger.rs
