[package]
name = "az_logger"
version = "0.1.2"
edition = "2024"
readme = "README.md"
description = "Very simple logging class for my projects"
repository = "https://github.com/mrLochness350/az_logger"
license = "MIT"

[dependencies]
chrono = "0.4.40"
serde = { version = "1.0.219", features = ["derive"] }
lazy_static = "1.5.0"
colored = "3.0.0"
